examples/errors/missing_end.zirc
fun test(): 
    show("missing end")
show("after function")